fixed pagination again for the last time ever, human readable date, prettiness

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@ nav.row {
 }
 
 .post {
-	/* background: #66D9EF; */
+	background: #EEE;
 	padding: 20px 20px 0 20px;
 }
 
@@ -54,17 +54,18 @@ nav.row {
 }
 
 .show_replies {
-	/* background: #00B4FF; */
-	padding: 20px;
+	background: #272822;
 }
 
 .show_replies a {
 	color: #EEE;
+	display: block;
+	line-height: 50px;
 }
 
 .reply {
-	/* background: #00B4FF; */
-	margin-bottom: 1px !important;
+	border: 1px solid #272822;
+	border-top: none;
 	padding: 20px 20px 0 20px;
 }
 
@@ -79,7 +80,7 @@ nav.row {
 }
 
 .time {
-	border-top: 1px dotted #EEE;
+	border-top: 1px dotted #272822;
 	margin-top: 15px !important;
 	padding-top: 15px;
 	text-align: right;
